user_manager/user-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-manager-service
  namespace: germes-the-bot
spec:
  selector:
    app.kubernetes.io/name: user-manager
  ports:
    - port: 5000
      targetPort: healthcheck
  type: ClusterIP
