user_manager/user-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-manager-ingress
  namespace: germes-the-bot
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: germes-manager-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
  - host: germes-bot-manager.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: user-manager
            port:
              number: 5000
